# hole_detection

./: pyproject.toml
hole_detection/: hole_det.py
